@@ -1,3 +1,9 @@
+2011-01-03  Pratik Solanki  <psolanki@apple.com>
+
+        Mac build fix. Define WTF_USE_CFNETWORK for Windows build only.
+
+        * WebCoreSupport/WebInspectorClientCF.cpp:
+
 2011-01-03  Brian Weinstein  <bweinstein@apple.com>
 
         Windows build fix. Define WTF_USE_CFNETWORK in WebInspectorClientCF.
